<resources>
    <string name="app_name">SuperApp</string>
    <string name="text_view">TextView</string>
    <string name="btn_text_view">TEXTVIEW</string>
    <string name="btn_edittext">EDITTEXT</string>
    <string name="btn_button">BUTTON</string>
    <string name="btn_app_bar">APP-BAR</string>
    <string name="btn_toolbar">TOOLBAR</string>
    <string name="btn_imageview">IMAGEVIEW</string>
    <string name="btn_spinner">SPINNER</string>
    <string name="btn_adapterview">ADAPTERVIEW</string>
    <string name="btn_recyclerview">RECYCLERVIEW</string>
    <string name="btn_service">SERVICE</string>
    <string name="btn_content_provider">CONTENT PROVIDER</string>
    <string name="text_magnifying_glass">Available in Android 9 (API level 28) and higher, the magnifier widget is a virtual magnifying glass that displays an enlarged copy of a chosen View through an overlay pane that represents the lens. The feature improves the text insertion and selection user experience: when applying the magnifier to text, a user can precisely position the cursor or the selection handles by viewing the magnified text in a pane that follows their finger. Figure 1 below showcases the way the magnifier facilitates selecting text. The magnifier APIs are not tied to text, and this widget can be used in a variety of use cases, such as reading small type or enlarging hard-to-see place names on maps.</string>
    <string name="read_full">Read full</string>
    <string name="textview_monospace_font">textview monospace font</string>
    <string name="textview_casual_font">textview casual font</string>
    <string name="text_medium_black_style">TextMediumBlack Style</string>
    <string name="text_big_style">TextBig Style</string>
    <string name="pass_hint">password</string>
    <string name="login_hint">login</string>
    <string name="edit_text">EditText</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_label">login:</string>
    <string name="has_not_focus">EditText has not focus</string>
    <string name="has_focus">EditText has focus</string>
    <string name="password_label">password:</string>

</resources>