<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="20dp">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_view"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edittext"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_button"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_app_bar"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_toolbar"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_imageview"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_spinner"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_adapterview"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_recyclerview"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_service"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_content_provider"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@drawable/selector_button_text"
        android:background="@drawable/selector_button_custom">
    </Button>

</LinearLayout>

</ScrollView>